--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@uifabric/icons": "^7.5.17",
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "clsx": "^1.1.1",
     "download.js": "^1.0.0",
     "eventemitter3": "^4.0.7",
@@ -20,12 +20,12 @@
     "react-dom": "^17.0.1",
     "react-grid-system": "^7.1.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.4",
+    "react-scripts": "^4.0.1",
     "react-transition-group": "^4.4.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "eslint": "^6.6.0",
+    "eslint": "^7.5.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
@@ -36,7 +36,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint ."
   },
   "eslintConfig": {
     "extends": [
