--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: AdminTools CD
 
 on:
   push:
@@ -11,18 +11,24 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [15.x]
+    # strategy:
+    #   matrix:
+    #     node-version: [15.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
+    - name: SSH Remote Commands
+      uses: appleboy/ssh-action@v0.1.4
       with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm i && npm run build --if-present
+        host: ${{ secrets.SSH_HOST_TEST }}
+        username: ${{ secrets.SSH_USERNAME }}
+        password: ${{ secrets.SSH_PASSWORD_TEST }}
+    - name: run deploymend script
+    - run: ls && cd /home/${{ secrets.SSH_USERNAME }}/appraisal-web-base && ls
+    # - uses: actions/checkout@v2
+    # - name: Use Node.js ${{ matrix.node-version }}
+    #   uses: actions/setup-node@v2
+    #   with:
+    #     node-version: ${{ matrix.node-version }}
+    # - run: npm i && npm run build --if-present
