--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,7 +30,8 @@ jobs:
           git pull origin testing
           npm run build
           cd ..
-          docker-compose -f docker-compose-test.yml up --build nginx 
+          docker-compose -f docker-compose-test.yml up -d 
+          docker-compose -f docker-compose-test.yml up -d --build nginx
     # - name: run deploymend script
     #   run: cd /home/root
     # - uses: actions/checkout@v2
