--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,31 +12,43 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    # strategy:
-    #   matrix:
-    #     node-version: [15.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
+    strategy:
+      matrix:
+        node-version: [15.x]
+        See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - name: SSH Remote Commands
-      uses: appleboy/ssh-action@v0.1.4
-      with:
-        host: ${{ secrets.SSH_HOST_TEST }}
-        username: ${{ secrets.SSH_USERNAME }}
-        password: ${{ secrets.SSH_PASSWORD_TEST }}
-        script: | 
-          cd appraisal-web-base/admintools-front
-          git checkout -b testing
-          git pull origin testing
-          npm run build
-          cd ..
-          docker-compose -f docker-compose-test.yml up -d 
-          docker-compose -f docker-compose-test.yml up -d --build nginx
-    # - name: run deploymend script
-    #   run: cd /home/root
-    # - uses: actions/checkout@v2
-    # - name: Use Node.js ${{ matrix.node-version }}
-    #   uses: actions/setup-node@v2
+    # - name: SSH Remote Commands
+    #   uses: appleboy/ssh-action@v0.1.4
     #   with:
-    #     node-version: ${{ matrix.node-version }}
-    # - run: npm i && npm run build --if-present
+    #     host: ${{ secrets.SSH_HOST_TEST }}
+    #     username: ${{ secrets.SSH_USERNAME }}
+    #     password: ${{ secrets.SSH_PASSWORD_TEST }}
+    #     script: | 
+    #       cd appraisal-web-base/admintools-front
+    #       git checkout -b testing
+    #       git pull origin testing
+    #       npm run build
+    #       cd ..
+    #       docker-compose -f docker-compose-test.yml up -d 
+    #       docker-compose -f docker-compose-test.yml up -d --build nginx
+    - name: run deploymend script
+      run: cd /home/root
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node-version }}
+    - run: npm ci && npm run build --if-present && ls
+    # Copying files and artifacts via SSH
+      - name: SCP Files
+        uses: appleboy/scp-action@v0.0.1
+        with:
+          host: ${{ secrets.SSH_HOST_TEST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          # key: ${{ secrets.SSH_KEY }}
+          password: ${{ secrets.SSH_PASSWORD_TEST }}
+          rm: true
+          source: "build"
+          target: "${{ secrets.SSH_BUILDDIR_TEST }}"
