--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,7 +23,8 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm ci && npm run build --if-present && ls
+    # - run: npm ci && npm run build --if-present && ls
+    - run: ls
     # Copying files and artifacts via SSH
     - name: SCP Files
       uses: appleboy/scp-action@v0.0.1
