--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,8 +23,7 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-    # - run: npm ci && npm run build --if-present && ls
-    - run: ls
+    - run: npm ci && npm run build --if-present && ls
     # Copying files and artifacts via SSH
     - name: SCP Files
       uses: appleboy/scp-action@master
@@ -36,3 +35,5 @@ jobs:
         rm: true
         source: "build"
         target: "${{ secrets.SSH_BUILDDIR_TEST }}"
+    - name: Debuild nginx
+      run: cd .. && docker-compose -f docker-compose-test.yml up --build -d nginx
