--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,16 +24,28 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm ci && npm run build --if-present && ls
+
+  deploy:
+    needs: build
+
+    steps:
     # Copying files and artifacts via SSH
     - name: SCP Files
       uses: appleboy/scp-action@master
       with:
         host: ${{ secrets.SSH_HOST_TEST }}
         username: ${{ secrets.SSH_USERNAME }}
-        # key: ${{ secrets.SSH_KEY }}
         password: ${{ secrets.SSH_PASSWORD_TEST }}
         rm: true
         source: "build"
         target: "${{ secrets.SSH_BUILDDIR_TEST }}"
-    - name: Debuild nginx
-      run: cd .. && docker-compose -f docker-compose-test.yml up --build -d nginx
+    # Rebuild nginx container
+    - name: SSH Remote Commands
+      uses: appleboy/ssh-action@v0.1.4
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        password: ${{ secrets.PASSWORD }}
+        script: |
+          cd ..
+          docker-compose -f docker-compose-test.yml up --build -d nginx
+
