--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,13 +23,23 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm ci && npm run build --if-present && ls
+    # - run: npm ci && npm run build --if-present && ls
+    - run: ls
+    - name: Archive build folder
+      uses: actions/upload-artifact@v2
+      with:
+        name: build-admintools-test
+        path: build
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
 
     steps:
+    - name: Download a single artifact
+      uses: actions/download-artifact@v2
+      with:
+        name: my-artifact
     # Copying files and artifacts via SSH
     - name: SCP Files
       uses: appleboy/scp-action@master
