--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -39,7 +39,7 @@ jobs:
     - name: Download a single artifact
       uses: actions/download-artifact@v2
       with:
-        name: my-artifact
+        name: build-admintools-test
     # Copying files and artifacts via SSH
     - name: SCP Files
       uses: appleboy/scp-action@master
