--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -40,7 +40,6 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: build-admintools-test
-    - run: cd .. && ls
     # Copying files and artifacts via SSH
     - name: SCP Files
       uses: appleboy/scp-action@master
@@ -49,7 +48,7 @@ jobs:
         username: ${{ secrets.SSH_USERNAME }}
         password: ${{ secrets.SSH_PASSWORD_TEST }}
         rm: true
-        source: "build"
+        source: "."
         target: "${{ secrets.SSH_BUILDDIR_TEST }}"
     # Rebuild nginx container
     - name: SSH Remote Commands
