--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -54,9 +54,9 @@ jobs:
     - name: SSH Remote Commands
       uses: appleboy/ssh-action@v0.1.4
       with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        password: ${{ secrets.PASSWORD }}
+        host: ${{ secrets.SSH_HOST_TEST }}
+        username: ${{ secrets.SSH_USERNAME }}
+        password: ${{ secrets.SSH_PASSWORD_TEST }}
         script: |
           cd ..
           docker-compose -f docker-compose-test.yml up --build -d nginx
