--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -58,6 +58,6 @@ jobs:
         username: ${{ secrets.SSH_USERNAME }}
         password: ${{ secrets.SSH_PASSWORD_TEST }}
         script: |
-          cd ..
+          cd ~/appraisal-web-base
           docker-compose -f docker-compose-test.yml up --build -d nginx
 
