--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -52,7 +52,7 @@ jobs:
         target: "${{ secrets.SSH_BUILDDIR_TEST }}"
     # Rebuild nginx container
     - name: SSH Remote Commands
-      uses: appleboy/ssh-action@v0.1.4
+      uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.SSH_HOST_TEST }}
         username: ${{ secrets.SSH_USERNAME }}
