--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -57,10 +57,5 @@ jobs:
         host: ${{ secrets.SSH_HOST_TEST }}
         username: ${{ secrets.SSH_USERNAME }}
         password: ${{ secrets.SSH_PASSWORD_TEST }}
-        script: |
-          ls
-          pwd
-          cd ~/appraisal-web-base
-          ls
-          docker-compose -f docker-compose-test.yml up --build -d nginx
+        script: whoami
 
