--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -40,7 +40,7 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: build-admintools-test
-    Copying files and artifacts via SSH
+    # Copying files and artifacts via SSH
     - name: SCP Files
       uses: appleboy/scp-action@master
       with:
