--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,17 +13,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [15.x]
-
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
-        node-version: ${{ matrix.node-version }}
-    # - run: npm ci && npm run build --if-present && ls
+        node-version: 15.x
+    - run: npm ci && npm run build --if-present && ls
     - run: ls
     - name: Archive build folder
       uses: actions/upload-artifact@v2
@@ -51,6 +47,7 @@ jobs:
         source: "."
         target: "${{ secrets.SSH_BUILDDIR_TEST }}"
 
+  # Rebuild nginx and frontend container
   rebuild:
     needs: deploy
     runs-on: ubuntu-latest
@@ -61,5 +58,6 @@ jobs:
         host: ${{ secrets.SSH_HOST_TEST }}
         username: ${{ secrets.SSH_USERNAME }}
         password: ${{ secrets.SSH_PASSWORD_TEST }}
-        timeout: 120s
-        script: whoami
+        script: |
+          cd ~/appraisal-web-base
+          docker-compose -f docker-compose-test.yml up --build -d nginx
