--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,8 +19,7 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: 15.x
-    - run: npm ci && npm run build --if-present && ls
-    - run: ls
+    - run: npm ci && npm run build --if-present
     - name: Archive build folder
       uses: actions/upload-artifact@v2
       with:
